// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateManifestPage should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  max-width: 45.5rem;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 0.813rem;
  margin-top: 1rem;
}

.emotion-1 {
  min-height: 3.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.emotion-4 {
  margin: 0 0 1.5rem 0;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 30rem;
}

.emotion-10 {
  width: 30rem;
}

.emotion-11 {
  font-size: 0.813rem;
  color: black;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.emotion-14 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-14:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-17 {
  width: 100%;
}

.emotion-24 {
  outline: transparent;
  position: relative;
  font-size: 0.875rem;
  font-weight: 400;
  box-sizing: border-box;
  border: 1px solid rgb(138, 136, 134);
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  cursor: pointer;
  padding: 0 1rem;
  border-radius: 2px;
  min-width: 5rem;
  height: 1.5rem;
  background-color: rgb(255, 255, 255);
  color: rgb(50, 49, 48);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-left: 1rem;
}

.emotion-24:hover {
  background-color: rgb(243, 242, 241);
  color: rgb(32, 31, 30);
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
}

.emotion-26 {
  display: none;
}

.emotion-27 {
  height: 1.5rem;
  line-height: 1.5rem;
  font-size: 0.813rem;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          aria-describedby="MessageBar0"
          class="ms-MessageBar ms-MessageBar--error ms-MessageBar-multiline emotion-1 root-109"
          role="region"
        >
          <div
            class="ms-MessageBar-content content-110"
          >
            <div
              aria-hidden="true"
              class="ms-MessageBar-icon iconContainer-111"
            >
              <i
                aria-hidden="true"
                class="icon-121"
                data-icon-name="ErrorBadge"
              >
                
              </i>
            </div>
            <div
              aria-live="assertive"
              class="ms-MessageBar-text text-113"
              id="MessageBar0"
              role="alert"
            >
              <span
                class="ms-MessageBar-innerText innerText-114"
                data-testid="error-bar"
              />
            </div>
            <button
              aria-label="close"
              class="ms-Button ms-Button--icon ms-MessageBar-dismissal dismissal-122"
              data-is-focusable="true"
              title="close"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-123"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-2 ms-Button-icon icon-125"
                  data-icon-name="Clear"
                  style="font-family: \\"FabricMDL2Icons\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
        <h2
          class="emotion-3"
        >
          process.file
        </h2>
        <p
          class="emotion-4"
        >
          create.new.manifest.page.description
        </p>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              geography
            </div>
            <span
              class="emotion-8"
            >
              <div
                class="ms-TooltipHost root-132"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-133"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip4"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.geography
                </div>
              </div>
            </span>
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="emotion-10"
            >
              <div
                class="fui-Dropdown ___88nkp20_1nwmw84 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl f14t3ns0 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
                style="border-radius: 2px; border: 1px solid #605e5c; font-size: 0.813rem; height: 1.5rem; line-height: 1.5rem; width: 100%;"
              >
                <button
                  aria-expanded="false"
                  class="fui-Dropdown__button ___1jkuyn2_1ro7mo8 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl fxc4j92 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fy9rknc figsok6 fwrc4pm f1khb0e9 fdw0yi8 f1jnq6q7 f1xile11"
                  role="combobox"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    geography.unitedstates
                  </div>
                  <span
                    class="fui-Dropdown__expandIcon ___wu62wz0_l0el1i0 f1ewtqcl fxkbij4 ftgm304 f4ybsrx f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                  >
                    <svg
                      aria-hidden="true"
                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-14"
            >
              subscription.key
            </div>
            <span
              class="emotion-8"
            >
              <div
                class="ms-TooltipHost root-132"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-133"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip5"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.subKey
                </div>
              </div>
            </span>
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="ms-TextField emotion-17 root-135"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-136"
                >
                  <input
                    aria-invalid="false"
                    aria-label="subscription.key"
                    aria-required="true"
                    class="ms-TextField-field field-137"
                    data-testid="subscription-key-field"
                    id="TextField6"
                    type="password"
                    value=""
                  />
                  <button
                    aria-pressed="false"
                    class="ms-TextField-reveal ms-Button ms-Button--icon revealButton-143"
                    type="button"
                  >
                    <span
                      class="revealSpan-144"
                    >
                      <i
                        aria-hidden="true"
                        class="revealIcon-148"
                        data-icon-name="RedEye"
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-14"
            >
              dwg.zip.package
            </div>
            <span
              class="emotion-8"
            >
              <div
                class="ms-TooltipHost root-132"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-133"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip11"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.dwg.zip.package
                </div>
              </div>
            </span>
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="ms-TextField emotion-17 root-135"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-136"
                >
                  <input
                    aria-invalid="false"
                    aria-label="dwg.zip.package"
                    aria-required="true"
                    class="ms-TextField-field field-137"
                    data-testid="file-name-field"
                    id="TextField12"
                    readonly=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <label
              class="emotion-24"
              for="file-upload-field"
            >
              <span
                class="emotion-25"
              >
                browse
              </span>
            </label>
            <input
              class="emotion-26"
              data-testid="file-upload-field"
              id="file-upload-field"
              type="file"
            />
          </div>
        </div>
        <button
          aria-disabled="true"
          class="ms-Button ms-Button--primary is-disabled emotion-27 root-149"
          data-is-focusable="false"
          data-testid="upload-button"
          disabled=""
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-123"
            data-automationid="splitbuttonprimary"
          >
            <span
              class="ms-Button-textContainer textContainer-124"
            >
              <span
                class="ms-Button-label label-151"
                id="id__17"
              >
                process
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  max-width: 45.5rem;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 0.813rem;
  margin-top: 1rem;
}

.emotion-1 {
  min-height: 3.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.emotion-4 {
  margin: 0 0 1.5rem 0;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 30rem;
}

.emotion-10 {
  width: 30rem;
}

.emotion-11 {
  font-size: 0.813rem;
  color: black;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.emotion-14 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-14:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-17 {
  width: 100%;
}

.emotion-24 {
  outline: transparent;
  position: relative;
  font-size: 0.875rem;
  font-weight: 400;
  box-sizing: border-box;
  border: 1px solid rgb(138, 136, 134);
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  cursor: pointer;
  padding: 0 1rem;
  border-radius: 2px;
  min-width: 5rem;
  height: 1.5rem;
  background-color: rgb(255, 255, 255);
  color: rgb(50, 49, 48);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-left: 1rem;
}

.emotion-24:hover {
  background-color: rgb(243, 242, 241);
  color: rgb(32, 31, 30);
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
}

.emotion-26 {
  display: none;
}

.emotion-27 {
  height: 1.5rem;
  line-height: 1.5rem;
  font-size: 0.813rem;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        aria-describedby="MessageBar0"
        class="ms-MessageBar ms-MessageBar--error ms-MessageBar-multiline emotion-1 root-109"
        role="region"
      >
        <div
          class="ms-MessageBar-content content-110"
        >
          <div
            aria-hidden="true"
            class="ms-MessageBar-icon iconContainer-111"
          >
            <i
              aria-hidden="true"
              class="icon-121"
              data-icon-name="ErrorBadge"
            >
              
            </i>
          </div>
          <div
            aria-live="assertive"
            class="ms-MessageBar-text text-113"
            id="MessageBar0"
            role="alert"
          >
            <span
              class="ms-MessageBar-innerText innerText-114"
              data-testid="error-bar"
            />
          </div>
          <button
            aria-label="close"
            class="ms-Button ms-Button--icon ms-MessageBar-dismissal dismissal-122"
            data-is-focusable="true"
            title="close"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-123"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-2 ms-Button-icon icon-125"
                data-icon-name="Clear"
                style="font-family: \\"FabricMDL2Icons\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
      <h2
        class="emotion-3"
      >
        process.file
      </h2>
      <p
        class="emotion-4"
      >
        create.new.manifest.page.description
      </p>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            geography
          </div>
          <span
            class="emotion-8"
          >
            <div
              class="ms-TooltipHost root-132"
              role="none"
            >
              <i
                aria-label="Tooltip"
                class="root-133"
                data-icon-name="Info"
                role="img"
              >
                
              </i>
              <div
                hidden=""
                id="tooltip4"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                tooltip.geography
              </div>
            </div>
          </span>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-10"
          >
            <div
              class="fui-Dropdown ___88nkp20_1nwmw84 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl f14t3ns0 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
              style="border-radius: 2px; border: 1px solid #605e5c; font-size: 0.813rem; height: 1.5rem; line-height: 1.5rem; width: 100%;"
            >
              <button
                aria-expanded="false"
                class="fui-Dropdown__button ___1jkuyn2_1ro7mo8 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl fxc4j92 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fy9rknc figsok6 fwrc4pm f1khb0e9 fdw0yi8 f1jnq6q7 f1xile11"
                role="combobox"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  geography.unitedstates
                </div>
                <span
                  class="fui-Dropdown__expandIcon ___wu62wz0_l0el1i0 f1ewtqcl fxkbij4 ftgm304 f4ybsrx f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                >
                  <svg
                    aria-hidden="true"
                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-14"
          >
            subscription.key
          </div>
          <span
            class="emotion-8"
          >
            <div
              class="ms-TooltipHost root-132"
              role="none"
            >
              <i
                aria-label="Tooltip"
                class="root-133"
                data-icon-name="Info"
                role="img"
              >
                
              </i>
              <div
                hidden=""
                id="tooltip5"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                tooltip.subKey
              </div>
            </div>
          </span>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="ms-TextField emotion-17 root-135"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-136"
              >
                <input
                  aria-invalid="false"
                  aria-label="subscription.key"
                  aria-required="true"
                  class="ms-TextField-field field-137"
                  data-testid="subscription-key-field"
                  id="TextField6"
                  type="password"
                  value=""
                />
                <button
                  aria-pressed="false"
                  class="ms-TextField-reveal ms-Button ms-Button--icon revealButton-143"
                  type="button"
                >
                  <span
                    class="revealSpan-144"
                  >
                    <i
                      aria-hidden="true"
                      class="revealIcon-148"
                      data-icon-name="RedEye"
                    >
                      
                    </i>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-14"
          >
            dwg.zip.package
          </div>
          <span
            class="emotion-8"
          >
            <div
              class="ms-TooltipHost root-132"
              role="none"
            >
              <i
                aria-label="Tooltip"
                class="root-133"
                data-icon-name="Info"
                role="img"
              >
                
              </i>
              <div
                hidden=""
                id="tooltip11"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                tooltip.dwg.zip.package
              </div>
            </div>
          </span>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="ms-TextField emotion-17 root-135"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-136"
              >
                <input
                  aria-invalid="false"
                  aria-label="dwg.zip.package"
                  aria-required="true"
                  class="ms-TextField-field field-137"
                  data-testid="file-name-field"
                  id="TextField12"
                  readonly=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <label
            class="emotion-24"
            for="file-upload-field"
          >
            <span
              class="emotion-25"
            >
              browse
            </span>
          </label>
          <input
            class="emotion-26"
            data-testid="file-upload-field"
            id="file-upload-field"
            type="file"
          />
        </div>
      </div>
      <button
        aria-disabled="true"
        class="ms-Button ms-Button--primary is-disabled emotion-27 root-149"
        data-is-focusable="false"
        data-testid="upload-button"
        disabled=""
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-124"
          >
            <span
              class="ms-Button-label label-151"
              id="id__17"
            >
              process
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CreateManifestPage should show error when subKey contains invalid chars 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  max-width: 45.5rem;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 0.813rem;
  margin-top: 1rem;
}

.emotion-1 {
  min-height: 3.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.emotion-4 {
  margin: 0 0 1.5rem 0;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 30rem;
}

.emotion-10 {
  width: 30rem;
}

.emotion-11 {
  font-size: 0.813rem;
  color: black;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.emotion-14 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-14:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-17 {
  width: 100%;
}

.emotion-24 {
  outline: transparent;
  position: relative;
  font-size: 0.875rem;
  font-weight: 400;
  box-sizing: border-box;
  border: 1px solid rgb(138, 136, 134);
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  cursor: pointer;
  padding: 0 1rem;
  border-radius: 2px;
  min-width: 5rem;
  height: 1.5rem;
  background-color: rgb(255, 255, 255);
  color: rgb(50, 49, 48);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-left: 1rem;
}

.emotion-24:hover {
  background-color: rgb(243, 242, 241);
  color: rgb(32, 31, 30);
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
}

.emotion-26 {
  display: none;
}

.emotion-27 {
  height: 1.5rem;
  line-height: 1.5rem;
  font-size: 0.813rem;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          aria-describedby="MessageBar100"
          class="ms-MessageBar ms-MessageBar--error ms-MessageBar-multiline emotion-1 root-109"
          role="region"
        >
          <div
            class="ms-MessageBar-content content-110"
          >
            <div
              aria-hidden="true"
              class="ms-MessageBar-icon iconContainer-111"
            >
              <i
                aria-hidden="true"
                class="icon-121"
                data-icon-name="ErrorBadge"
              >
                
              </i>
            </div>
            <div
              aria-live="assertive"
              class="ms-MessageBar-text text-113"
              id="MessageBar100"
              role="alert"
            >
              <span
                class="ms-MessageBar-innerText innerText-114"
                data-testid="error-bar"
              />
            </div>
            <button
              aria-label="close"
              class="ms-Button ms-Button--icon ms-MessageBar-dismissal dismissal-122"
              data-is-focusable="true"
              title="close"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-123"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-2 ms-Button-icon icon-125"
                  data-icon-name="Clear"
                  style="font-family: \\"FabricMDL2Icons\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
        <h2
          class="emotion-3"
        >
          process.file
        </h2>
        <p
          class="emotion-4"
        >
          create.new.manifest.page.description
        </p>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              geography
            </div>
            <span
              class="emotion-8"
            >
              <div
                class="ms-TooltipHost root-132"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-133"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip104"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.geography
                </div>
              </div>
            </span>
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="emotion-10"
            >
              <div
                class="fui-Dropdown ___88nkp20_1nwmw84 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl f14t3ns0 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
                style="border-radius: 2px; border: 1px solid #605e5c; font-size: 0.813rem; height: 1.5rem; line-height: 1.5rem; width: 100%;"
              >
                <button
                  aria-expanded="false"
                  class="fui-Dropdown__button ___1jkuyn2_1ro7mo8 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl fxc4j92 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fy9rknc figsok6 fwrc4pm f1khb0e9 fdw0yi8 f1jnq6q7 f1xile11"
                  role="combobox"
                  type="button"
                >
                  <div
                    class="emotion-11"
                  >
                    geography.europe
                  </div>
                  <span
                    class="fui-Dropdown__expandIcon ___wu62wz0_l0el1i0 f1ewtqcl fxkbij4 ftgm304 f4ybsrx f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                  >
                    <svg
                      aria-hidden="true"
                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-14"
            >
              subscription.key
            </div>
            <span
              class="emotion-8"
            >
              <div
                class="ms-TooltipHost root-132"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-133"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip105"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.subKey
                </div>
              </div>
            </span>
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="ms-TextField emotion-17 root-135"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-136"
                >
                  <input
                    aria-invalid="false"
                    aria-label="subscription.key"
                    aria-required="true"
                    class="ms-TextField-field field-137"
                    data-testid="subscription-key-field"
                    id="TextField106"
                    type="password"
                    value="subscription_key!"
                  />
                  <button
                    aria-pressed="false"
                    class="ms-TextField-reveal ms-Button ms-Button--icon revealButton-143"
                    type="button"
                  >
                    <span
                      class="revealSpan-144"
                    >
                      <i
                        aria-hidden="true"
                        class="revealIcon-148"
                        data-icon-name="RedEye"
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-14"
            >
              dwg.zip.package
            </div>
            <span
              class="emotion-8"
            >
              <div
                class="ms-TooltipHost root-132"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-133"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip111"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.dwg.zip.package
                </div>
              </div>
            </span>
          </div>
          <div
            class="emotion-9"
          >
            <div
              class="ms-TextField emotion-17 root-135"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-136"
                >
                  <input
                    aria-invalid="false"
                    aria-label="dwg.zip.package"
                    aria-required="true"
                    class="ms-TextField-field field-137"
                    data-testid="file-name-field"
                    id="TextField112"
                    readonly=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <label
              class="emotion-24"
              for="file-upload-field"
            >
              <span
                class="emotion-25"
              >
                browse
              </span>
            </label>
            <input
              class="emotion-26"
              data-testid="file-upload-field"
              id="file-upload-field"
              type="file"
            />
          </div>
        </div>
        <button
          aria-disabled="true"
          class="ms-Button ms-Button--primary is-disabled emotion-27 root-149"
          data-is-focusable="false"
          data-testid="upload-button"
          disabled=""
          type="button"
        >
          <span
            class="ms-Button-flexContainer flexContainer-123"
            data-automationid="splitbuttonprimary"
          >
            <span
              class="ms-Button-textContainer textContainer-124"
            >
              <span
                class="ms-Button-label label-151"
                id="id__117"
              >
                process
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  max-width: 45.5rem;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 0.813rem;
  margin-top: 1rem;
}

.emotion-1 {
  min-height: 3.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.emotion-4 {
  margin: 0 0 1.5rem 0;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 30rem;
}

.emotion-10 {
  width: 30rem;
}

.emotion-11 {
  font-size: 0.813rem;
  color: black;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.emotion-14 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-14:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-17 {
  width: 100%;
}

.emotion-24 {
  outline: transparent;
  position: relative;
  font-size: 0.875rem;
  font-weight: 400;
  box-sizing: border-box;
  border: 1px solid rgb(138, 136, 134);
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  cursor: pointer;
  padding: 0 1rem;
  border-radius: 2px;
  min-width: 5rem;
  height: 1.5rem;
  background-color: rgb(255, 255, 255);
  color: rgb(50, 49, 48);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-left: 1rem;
}

.emotion-24:hover {
  background-color: rgb(243, 242, 241);
  color: rgb(32, 31, 30);
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
}

.emotion-26 {
  display: none;
}

.emotion-27 {
  height: 1.5rem;
  line-height: 1.5rem;
  font-size: 0.813rem;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        aria-describedby="MessageBar100"
        class="ms-MessageBar ms-MessageBar--error ms-MessageBar-multiline emotion-1 root-109"
        role="region"
      >
        <div
          class="ms-MessageBar-content content-110"
        >
          <div
            aria-hidden="true"
            class="ms-MessageBar-icon iconContainer-111"
          >
            <i
              aria-hidden="true"
              class="icon-121"
              data-icon-name="ErrorBadge"
            >
              
            </i>
          </div>
          <div
            aria-live="assertive"
            class="ms-MessageBar-text text-113"
            id="MessageBar100"
            role="alert"
          >
            <span
              class="ms-MessageBar-innerText innerText-114"
              data-testid="error-bar"
            />
          </div>
          <button
            aria-label="close"
            class="ms-Button ms-Button--icon ms-MessageBar-dismissal dismissal-122"
            data-is-focusable="true"
            title="close"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-123"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-2 ms-Button-icon icon-125"
                data-icon-name="Clear"
                style="font-family: \\"FabricMDL2Icons\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
      <h2
        class="emotion-3"
      >
        process.file
      </h2>
      <p
        class="emotion-4"
      >
        create.new.manifest.page.description
      </p>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            geography
          </div>
          <span
            class="emotion-8"
          >
            <div
              class="ms-TooltipHost root-132"
              role="none"
            >
              <i
                aria-label="Tooltip"
                class="root-133"
                data-icon-name="Info"
                role="img"
              >
                
              </i>
              <div
                hidden=""
                id="tooltip104"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                tooltip.geography
              </div>
            </div>
          </span>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-10"
          >
            <div
              class="fui-Dropdown ___88nkp20_1nwmw84 f1aa9q02 f16jpd5f f1jar5jt fyu767a f1ewtqcl f14t3ns0 f1exfvgq f10pi13n f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f14pi962 f1lh990p f1jc6hxc f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fv8e3ye ftb5wc6 fjw5xc1 f1xdyd5c fatpbeo fb7uyps f1cmft4k f1x58t8o f1ibeo51 fxugw4r f192inf7 f5tn483 f1vxd6vx f1ojsxk5 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1c1zstj f1lxtadh fvcxoqz f1ub3y4t flmw63s f1m52nbi fvs00aa f1assf6x fqhmt4z f4ruux4"
              style="border-radius: 2px; border: 1px solid #605e5c; font-size: 0.813rem; height: 1.5rem; line-height: 1.5rem; width: 100%;"
            >
              <button
                aria-expanded="false"
                class="fui-Dropdown__button ___1jkuyn2_1ro7mo8 f122n59 f1c21dwh fre7gi1 f1358rze fqdk4by f1rvrf73 f1ewtqcl fxc4j92 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fy9rknc figsok6 fwrc4pm f1khb0e9 fdw0yi8 f1jnq6q7 f1xile11"
                role="combobox"
                type="button"
              >
                <div
                  class="emotion-11"
                >
                  geography.europe
                </div>
                <span
                  class="fui-Dropdown__expandIcon ___wu62wz0_l0el1i0 f1ewtqcl fxkbij4 ftgm304 f4ybsrx f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                >
                  <svg
                    aria-hidden="true"
                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-14"
          >
            subscription.key
          </div>
          <span
            class="emotion-8"
          >
            <div
              class="ms-TooltipHost root-132"
              role="none"
            >
              <i
                aria-label="Tooltip"
                class="root-133"
                data-icon-name="Info"
                role="img"
              >
                
              </i>
              <div
                hidden=""
                id="tooltip105"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                tooltip.subKey
              </div>
            </div>
          </span>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="ms-TextField emotion-17 root-135"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-136"
              >
                <input
                  aria-invalid="false"
                  aria-label="subscription.key"
                  aria-required="true"
                  class="ms-TextField-field field-137"
                  data-testid="subscription-key-field"
                  id="TextField106"
                  type="password"
                  value="subscription_key!"
                />
                <button
                  aria-pressed="false"
                  class="ms-TextField-reveal ms-Button ms-Button--icon revealButton-143"
                  type="button"
                >
                  <span
                    class="revealSpan-144"
                  >
                    <i
                      aria-hidden="true"
                      class="revealIcon-148"
                      data-icon-name="RedEye"
                    >
                      
                    </i>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-14"
          >
            dwg.zip.package
          </div>
          <span
            class="emotion-8"
          >
            <div
              class="ms-TooltipHost root-132"
              role="none"
            >
              <i
                aria-label="Tooltip"
                class="root-133"
                data-icon-name="Info"
                role="img"
              >
                
              </i>
              <div
                hidden=""
                id="tooltip111"
                style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
              >
                tooltip.dwg.zip.package
              </div>
            </div>
          </span>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="ms-TextField emotion-17 root-135"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-136"
              >
                <input
                  aria-invalid="false"
                  aria-label="dwg.zip.package"
                  aria-required="true"
                  class="ms-TextField-field field-137"
                  data-testid="file-name-field"
                  id="TextField112"
                  readonly=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <label
            class="emotion-24"
            for="file-upload-field"
          >
            <span
              class="emotion-25"
            >
              browse
            </span>
          </label>
          <input
            class="emotion-26"
            data-testid="file-upload-field"
            id="file-upload-field"
            type="file"
          />
        </div>
      </div>
      <button
        aria-disabled="true"
        class="ms-Button ms-Button--primary is-disabled emotion-27 root-149"
        data-is-focusable="false"
        data-testid="upload-button"
        disabled=""
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-124"
          >
            <span
              class="ms-Button-label label-151"
              id="id__117"
            >
              process
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
